# spice-libcacard

./: .gitlab-ci.yml  .travis.yml  Makefile.am  NEWS  README.md  configure.ac  meson.build  meson_options.txt
build-aux/: meson-dist
docs/: libcacard.txt
fuzz/: fuzz_options.c  fuzz_xfer.c  meson.build
src/: cac-aca.c  cac-aca.h  cac.c  cac.h  capcsc.c  capcsc.h  card_7816.c  card_7816.h  card_7816t.h  common.c  common.h  eventt.h  gp.c  gp.h  libcacard.h  libcacard.map  libcacard.syms  msft.c  simpletlv.c  simpletlv.h  vcard.c  vcard.h  vcard_emul.h  vcard_emul_nss.c  vcard_emul_type.c  vcard_emul_type.h  vcardt.h  vevent.h  vreader.c  vreader.h  vreadert.h  vscard_common.h  vscclient.c
tests/: common.c  common.h  hwtests.c  libcacard.c  meson.build  setup-softhsm2.sh  simpletlv.c
